--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Calculate/RetirementPreparation.cshtml
@@ -1457,8 +1457,25 @@
         document.addEventListener("DOMContentLoaded", function () {
 
             var resultHasGap;
-            var chartsRevenues = [], chartsRewards = [], chartsRewardsCategories = [];
+            var chartsRevenues = [], chartsRewards = [], chartsRewardsCategories = [], chartsAssets = [];
             var defaultRiskAttributes = '@Model.DefaultRiskAttributes';
+            var assetsData = {
+                stock: {
+                    number: @Model.StockAllocation,
+                    fieldName: '@Model.StockAllocationFieldName',
+                    text: '@Model.StockAllocationText'
+                },
+                bond: {
+                    number: @Model.BondAllocation,
+                    fieldName: '@Model.BondAllocationFieldName',
+                    text: '@Model.BondAllocationText'
+                },
+                currency: {
+                    number: @Model.CurrencyAllocation,
+                    fieldName: '@Model.CurrencyAllocationFieldName',
+                    text: '@Model.CurrencyAllocationText'
+                }
+            };
 
             //#region 預計幾年後達成目標綁定事件
             let $sliderYear = $('[data-slider-id="year"]').get(0),
@@ -1692,9 +1709,8 @@
 
                     let tab1Results, tab2Results, tab3Results, tab4Results, currentYear;
 
-                    chartsRevenues.length = 0;
-                    chartsRewards.length = 0;
-                    chartsRewardsCategories.length = 0;
+                    // 圖表資料清除
+                    clearChartDatas();
 
                     // 顯示試算結果 - 描述區塊
                     $("#resultDescription").removeClass("u-hidden");
@@ -1731,7 +1747,7 @@
                         renderResultTab3(tab3Results, targetAmount, years, amountPrepared, pension, monthlyInvestment);
                     }
 
-                    // 顯示所有圓餅圖
+                    // 顯示預期收益圓餅圖
                     renderChartsRevenues(chartsRevenues);
 
                     // 取得長條圖年份顯示範圍
@@ -1740,6 +1756,9 @@
 
                     // 顯示投資報酬長條圖
                     renderChartsRewards(chartsRewards);
+
+                    // 顯示資產配置圓餅圖
+                    renderChartsAssets(chartsAssets);
 
                     // 顯示推薦商品
                     renderRecommendedFunds(9);
@@ -1786,9 +1805,8 @@
 
                     let tab1Results, tab2Results, tab3Results, tab4Results, currentYear;
 
-                    chartsRevenues.length = 0;
-                    chartsRewards.length = 0;
-                    chartsRewardsCategories.length = 0;
+                    // 圖表資料清除
+                    clearChartDatas();
 
                     // 顯示試算結果 - 描述區塊
                     $("#resultDescription").removeClass("u-hidden");
@@ -1828,7 +1846,7 @@
                     // tab active 狀態復原
                     bindTabSwitchEvent();
 
-                    // 顯示所有圓餅圖
+                    // 顯示預期收益圓餅圖
                     renderChartsRevenues(chartsRevenues);
 
                     // 取得長條圖年份顯示範圍
@@ -1837,6 +1855,9 @@
 
                     // 顯示投資報酬長條圖
                     renderChartsRewards(chartsRewards);
+
+                    // 顯示資產配置圓餅圖
+                    renderChartsAssets(chartsAssets);
 
                     // 顯示試算結果 - 諮詢區塊
                     $("#consult").removeClass("u-hidden");
@@ -2272,6 +2293,15 @@
             };
             //#endregion
 
+            //#region 圖表資料清除
+            function clearChartDatas() {
+                chartsRevenues.length = 0;
+                chartsRewards.length = 0;
+                chartsRewardsCategories.length = 0;
+                chartsAssets.length = 0;
+            }
+             //#endregion
+
             //#region 顯示試算結果 - 描述區塊
             function renderResultDescription(yearBegin, yearEnd, amountPrepared, pension, years, targetAmount, totalA, totalB) {
 
@@ -2369,6 +2399,14 @@
                     retire: getReservedFundsOrPensionsData(pension, years),
                     prepared: getReservedFundsOrPensionsData(amountPrepared, years)
                 });
+
+                // tab1資產配置資料
+                chartsAssets.push({
+                    id: 'chartsAssets-01',
+                    currency: assetsData.currency.number,
+                    bond: assetsData.bond.number,
+                    stock: assetsData.stock.number
+                });
             }
             //#endregion
 
@@ -2423,6 +2461,14 @@
                     retire: getReservedFundsOrPensionsData(pension, years),
                     prepared: getReservedFundsOrPensionsData(amountPrepared, years)
                 });
+
+                // tab2資產配置資料
+                chartsAssets.push({
+                    id: 'chartsAssets-02',
+                    currency: assetsData.currency.number,
+                    bond: assetsData.bond.number,
+                    stock: assetsData.stock.number
+                });
             }
             //#endregion
 
@@ -2470,6 +2516,14 @@
                     retire: getReservedFundsOrPensionsData(pension, years),
                     prepared: getReservedFundsOrPensionsData(amountPrepared, years)
                 });
+
+                // tab3資產配置資料
+                chartsAssets.push({
+                    id: 'chartsAssets-03',
+                    currency: assetsData.currency.number,
+                    bond: assetsData.bond.number,
+                    stock: assetsData.stock.number
+                });
             }
             //#endregion
 
@@ -2515,6 +2569,14 @@
                     invest: getRewardsInvestData(monthlyInvestment, years),
                     retire: getReservedFundsOrPensionsData(pension, years),
                     prepared: getReservedFundsOrPensionsData(amountPrepared, years)
+                });
+
+                // tab4資產配置資料
+                chartsAssets.push({
+                    id: 'chartsAssets-04',
+                    currency: assetsData.currency.number,
+                    bond: assetsData.bond.number,
+                    stock: assetsData.stock.number
                 });
             }
             //#endregion
@@ -2949,108 +3011,88 @@
             //#endregion
 
             //#region 資產配置圓餅圖顯示
-            let chartsAssets = [{
-                id: 'chartsAssets-01',
-                currency: 100000,
-                bond: 400000,
-                stock: 500000
-            }, {
-                id: 'chartsAssets-02',
-                currency: 100000,
-                bond: 400000,
-                stock: 500000
-            }, {
-                id: 'chartsAssets-03',
-                currency: 100000,
-                bond: 400000,
-                stock: 500000
-            }, {
-                id: 'chartsAssets-04',
-                currency: 100000,
-                bond: 400000,
-                stock: 500000
-            }];
-
-            chartsAssets.forEach(item => {
-                Highcharts.chart(item.id, {
-                    chart: {
-                        type: 'pie'
-                    },
-                    title: {
-                        text: undefined
-                    },
-                    legend: {
-                        labelFormat: '{alias}',
-                        align: 'left',
-                        alignColumns: false,
-                        itemDistance: 12,
-                        margin: 0,
-                        padding: 0,
-                        itemStyle: {
-                            font: '1em Microsoft JhengHei, Arial, Helvetica, sans-serif',
-                            cursor: 'default'
-                        }
-                    },
-                    tooltip: {
-                        pointFormat: '{point.name}：{point.y}',
-                        headerFormat: undefined,
-                        style: {
-                            fontFamily: 'Microsoft JhengHei, Arial, Helvetica, sans-serif',
-                            fontSize: '16px',
-                            fontWeight: 'normal'
+            function renderChartsAssets(chartsAssets) {
+                chartsAssets.forEach(item => {
+                    Highcharts.chart(item.id, {
+                        chart: {
+                            type: 'pie'
                         },
-                        shadow: {
-                            color: 'rgba(0, 0, 0, 0.1)'
-                        }
-                    },
-                    credits: {
-                        enabled: false
-                    },
-                    plotOptions: {
-                        pie: {
-                            size: 160,
-                            allowPointSelect: false,
-                            showInLegend: true,
-                            cursor: 'pointer',
-                            dataLabels: {
-                                alignTo: 'connectors',
-                                format: '{point.name}：{point.percentage:.1f}%',
-                                style: {
-                                    fontFamily: 'Microsoft JhengHei, Arial, Helvetica, sans-serif',
-                                    fontSize: '16px',
-                                    fontWeight: 'normal'
-                                }
+                        title: {
+                            text: undefined
+                        },
+                        legend: {
+                            labelFormat: '{alias}',
+                            align: 'left',
+                            alignColumns: false,
+                            itemDistance: 12,
+                            margin: 0,
+                            padding: 0,
+                            itemStyle: {
+                                font: '1em Microsoft JhengHei, Arial, Helvetica, sans-serif',
+                                cursor: 'default'
+                            }
+                        },
+                        tooltip: {
+                            pointFormat: '{point.name}：{point.y}',
+                            headerFormat: undefined,
+                            style: {
+                                fontFamily: 'Microsoft JhengHei, Arial, Helvetica, sans-serif',
+                                fontSize: '16px',
+                                fontWeight: 'normal'
                             },
-                            point: {
-                                events: {
-                                    legendItemClick: function (e) {
-                                        e.preventDefault();
+                            shadow: {
+                                color: 'rgba(0, 0, 0, 0.1)'
+                            }
+                        },
+                        credits: {
+                            enabled: false
+                        },
+                        plotOptions: {
+                            pie: {
+                                size: 160,
+                                allowPointSelect: false,
+                                showInLegend: true,
+                                cursor: 'pointer',
+                                dataLabels: {
+                                    alignTo: 'connectors',
+                                    format: '{point.name}：{point.percentage:.1f}%',
+                                    style: {
+                                        fontFamily: 'Microsoft JhengHei, Arial, Helvetica, sans-serif',
+                                        fontSize: '16px',
+                                        fontWeight: 'normal'
+                                    }
+                                },
+                                point: {
+                                    events: {
+                                        legendItemClick: function (e) {
+                                            e.preventDefault();
+                                        }
                                     }
                                 }
                             }
-                        }
-                    },
-                    series: [{
-                        name: '資產配置',
-                        data: [{
-                            name: '股票',
-                            alias: '股票 (含平衡型)',
-                            y: item.stock,
-                            color: '#3AAB68'
-                        }, {
-                            name: '債券',
-                            alias: '債券',
-                            y: item.bond,
-                            color: '#D0AD72'
-                        }, {
-                            name: '貨幣',
-                            alias: '貨幣',
-                            y: item.currency,
-                            color: '#FDAA5E'
+                        },
+                        series: [{
+                            name: '資產配置',
+                            data: [{
+                                name: assetsData.stock.text,
+                                alias: assetsData.stock.fieldName,
+                                y: item.stock,
+                                color: '#3AAB68'
+                            }, {
+                                name: assetsData.bond.text,
+                                alias: assetsData.bond.fieldName,
+                                y: item.bond,
+                                color: '#D0AD72'
+                            }, {
+                                name: assetsData.currency.text,
+                                alias: assetsData.currency.fieldName,
+                                y: item.currency,
+                                color: '#FDAA5E'
+                            }]
                         }]
-                    }]
+                    });
                 });
-            });
+            }
             //#endregion
 
             //#region  推薦基金商品顯示
