fix: highchart overload

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -3809,6 +3809,7 @@
                                 const otherData = {
                                     id: 'group',
                                     name: '同類型基金',
+                                    turboThreshold: 0,
                                     color: '#A4844E',
                                     data: mapData
                                 };
