Update：ETF 詳細頁 風險象限圖不限制數據點個數

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_RiskIndicator.cshtml
@@ -395,6 +395,7 @@
                                 id: 'group',
                                 name: '同類型ETF',
                                 color: '#A4844E',
+                                turboThreshold: 0,
                                 data: mapData
                             };
 
