Update：ETF 詳細頁 一銀賣價表格新增顯示資料日期

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFDetail/_HistoricalPrices.cshtml
@@ -99,6 +99,7 @@
                     </div>
                 </div>
             </div>
+            <div class="l-dataNotes"><span class="t-note">資料日期：@DateTimeExtensions.FormatDate(tradingPrice.PriceBaseDate)</span></div>
         </div>
     </section>
     <section class="c-section u-printBreak">
