--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/ETFSearch/EtfSearchIndex.cshtml
@@ -90,7 +90,12 @@
 
                 let urlParams = new URLSearchParams(window.location.search);
 
+                const OBJECT_PROTOTYPE_KEYS = Object.getOwnPropertyNames(Object.prototype);
+
                 for (const [key, value] of urlParams) {
+                    if (OBJECT_PROTOTYPE_KEYS.includes(key)) {
+                        continue;
+                    }
                     keywordObject[key.toLowerCase()] = DOMPurify.sanitize(decodeURIComponent(value));
                 }
 
