--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/MarketNewsSearch.cshtml
@@ -295,7 +295,7 @@
                                 <option value="日期高至低" data-sorting-column="NewsDate" data-sorting-class="is-desc">日期高至低</option>
                                 <option value="日期低至高" data-sorting-column="NewsDate" data-sorting-class="is-asc">日期低至高</option>
                                 @*<option value="新聞類別高至低" data-sorting-column="NewsType" data-sorting-class="is-desc">新聞類別高至低</option>
-                                <option value="新聞類別低至高" data-sorting-column="NewsType" data-sorting-class="is-asc">新聞類別低至高</option>*@
+                                    <option value="新聞類別低至高" data-sorting-column="NewsType" data-sorting-class="is-asc">新聞類別低至高</option>*@
                                 <option value="標題高至低" data-sorting-column="NewsTitle" data-sorting-class="is-desc">標題高至低</option>
                                 <option value="標題低至高" data-sorting-column="NewsTitle" data-sorting-class="is-asc">標題低至高</option>
                                 <option value="瀏覽人次高至低" data-sorting-column="NewsViewCount" data-sorting-class="is-desc">瀏覽人次高至低</option>
@@ -365,62 +365,62 @@
                                     </div>
                                 </th>
                                 @*<th>
-                                <div class="c-table__title">
-                                <span>收藏</span>
-                                </div>
-                                </th>*@
+                                    <div class="c-table__title">
+                                    <span>收藏</span>
+                                    </div>
+                                    </th>*@
                             </tr>
                         </thead>
                         <tbody id="uid-fjs"></tbody>
 
                         <script id="uid-template" type="text/html">
-                            <tr class="c-cardTable__item u-center@dt-only">
-                                <td class="c-cardTable__space"></td>
-                                <td class="c-cardTable__body " data-card-table-width="1/1">
-                                    <div class="c-cardTable__content">
-                                        <span class="o-iconText o-iconText--focus t-focus <%= HotNews %>" data-after-lt="焦點新聞"></span>
-                                    </div>
-                                </td>
-                                <td class="c-cardTable__body" data-card-table-width="1/1">
-                                    <div class="c-cardTable__content u-nowrap@dt-only"><%= NewsDate %></div>
-                                </td>
-                                <td class="c-cardTable__body" data-card-table-width="1/1">
-                                    <div class="c-cardTable__content u-left">
-                                        <% if (NewsType != null && NewsType != "") { %>
-                                        <% var newsTypes = NewsType.split(','); %>
-                                        <% for(var i = 0; i < newsTypes.length; i++ ) { %>
-                                        <span class="o-hangTag o-hangTag--gn"><%= newsTypes[i].trim() %></span>
-                                        <% } %>
-                                        <% } %>
-                                    </div>
-                                </td>
-                                <!-- .u-left@dt-only: 桌機版(@@desktop)置左 -->
-                                <td class="c-cardTable__body u-left@dt-only">
-                                    <div class="c-cardTable__content u-line-2@lt-only">
-                                        <a href="<%= NewsDetailLink %>" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt" target="_blank"><%= NewsTitle %></a>
-                                    </div>
-                                </td>
-                                <td class="c-cardTable__body" data-card-table-width="1/2">
-                                    <div class="c-cardTable__content">
-                                        <div class="o-views o-views@lt"><%= DisplayNewsViewCount %></div>
-                                    </div>
-                                </td>
-                                <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
-                                <td class="c-cardTable__space"></td>
-                                <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
-                                <!--<td class="c-cardTable__footer" data-card-table-width="1/1">
+                        <tr class="c-cardTable__item u-center@dt-only">
+                            <td class="c-cardTable__space"></td>
+                            <td class="c-cardTable__body " data-card-table-width="1/1">
                                 <div class="c-cardTable__content">
-                                    <ul class="l-collect l-collect--divider@lt">
-                                        <li class="l-collect__item">-->
-                                <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
-                                <!-- [data-ia="true"]: 啟用互動式按鈕，預設會有 tooltip 及 toast 提示訊息，需搭配 [data-msg] 設定訊息才會有作用 -->
-                                <!-- [data-msg]: active|inactive 的訊息，用 "|" 符號分隔，若訊息未設定完整則不顯示提示訊息 -->
-                                <!--<a href="#" class="o-statusBtn o-statusBtn--like" data-after-lt="收藏" data-msg="加入收藏|取消收藏" data-ia="true"></a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </td>-->
-                            </tr>
+                                    <span class="o-iconText o-iconText--focus t-focus <%= HotNews %>" data-after-lt="焦點新聞"></span>
+                                </div>
+                            </td>
+                            <td class="c-cardTable__body" data-card-table-width="1/1">
+                                <div class="c-cardTable__content u-nowrap@dt-only"><%= NewsDate %></div>
+                            </td>
+                            <td class="c-cardTable__body" data-card-table-width="1/1">
+                                <div class="c-cardTable__content u-left">
+                                    <% if (NewsType != null && NewsType != "") { %>
+                                    <% var newsTypes = NewsType.split(','); %>
+                                    <% for(var i = 0; i < newsTypes.length; i++ ) { %>
+                                    <span class="o-hangTag o-hangTag--gn"><%= newsTypes[i].trim() %></span>
+                                    <% } %>
+                                    <% } %>
+                                </div>
+                            </td>
+                            <!-- .u-left@dt-only: 桌機版(@@desktop)置左 -->
+                            <td class="c-cardTable__body u-left@dt-only">
+                                <div class="c-cardTable__content u-line-2@lt-only">
+                                    <a href="<%= NewsDetailLink %>" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt" target="_blank"><%= NewsTitle %></a>
+                                </div>
+                            </td>
+                            <td class="c-cardTable__body" data-card-table-width="1/2">
+                                <div class="c-cardTable__content">
+                                    <div class="o-views o-views@lt"><%= DisplayNewsViewCount %></div>
+                                </div>
+                            </td>
+                            <!-- .c-cardTable__space: 若需轉換成卡片，body 區塊結尾處需要額外放置此一欄位分隔 -->
+                            <td class="c-cardTable__space"></td>
+                            <!-- .c-cardTable__footer: 轉成卡片時若為下方按鈕區塊，需要加此 class name -->
+                            <!--<td class="c-cardTable__footer" data-card-table-width="1/1">
+                            <div class="c-cardTable__content">
+                                <ul class="l-collect l-collect--divider@lt">
+                                    <li class="l-collect__item">-->
+                            <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
+                            <!-- [data-ia="true"]: 啟用互動式按鈕，預設會有 tooltip 及 toast 提示訊息，需搭配 [data-msg] 設定訊息才會有作用 -->
+                            <!-- [data-msg]: active|inactive 的訊息，用 "|" 符號分隔，若訊息未設定完整則不顯示提示訊息 -->
+                            <!--<a href="#" class="o-statusBtn o-statusBtn--like" data-after-lt="收藏" data-msg="加入收藏|取消收藏" data-ia="true"></a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </td>-->
+                        </tr>
                         </script>
 
                     </table>
@@ -630,8 +630,9 @@
                         }
                     };
 
+                    $('.l-pagination__switch').off('keypress');
+
                     fjs = FilterJS(data, '#uid-fjs', opts);
-                    //fjs.bindEvent('[data-filter-reset]', 'click.reset');
                     fjs.bindEvent('[data-filter-tag="關鍵字"] [data-tag-close]', 'click.tag');
                     fjs.bindEvent('[data-keyword-submit]', 'click.loading');
 
@@ -684,7 +685,7 @@
                         isSameOrBefore = true;
 
                         var newstype = getMarketNewsType();
-                        var startdate = moment().add(-6, 'M').format('YYYY/MM/DD').replaceAll("/", "-");
+                        var startdate = moment().add(-1, 'days').format('YYYY/MM/DD').replaceAll("/", "-");
                         var enddate = moment().format('YYYY/MM/DD').replaceAll("/", "-");
 
                         getMarketNewsData(newstype, startdate, enddate);
@@ -709,7 +710,7 @@
                 // 日期區間預設半年(示意)
                 $('[data-filter-part="range"] input').eq(0).on('change.default', function () {
                     if (!$(this).val()) {
-                        $(this).val(moment().add(-6, 'M').format('YYYY/MM/DD')).datepicker('update');
+                        $(this).val(moment().add(-1, 'days').format('YYYY/MM/DD')).datepicker('update');
                     }
                 }).trigger('change.default');
                 $('[data-filter-part="range"] input').eq(1).on('change.default', function () {
