update: sql參數化select&&會員卡片調整

--- a/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
+++ b/src/Feature/Account/platform/Views/Feature/Wealth/Account/MemberCard/MemberCard.cshtml
@@ -84,7 +84,7 @@
                                         <span>您的理專</span>
                                     </div>
                                     <div class="c-member__value">
-                                        <b>@member.Advisror</b>
+                                        <b>@(string.IsNullOrEmpty(member.Advisror) ? "-" : member.Advisror)</b>
                                     </div>
                                 </div>
                             }
